--- a/index.html
+++ b/index.html
@@ -26,11 +26,9 @@
 	<!--Javascript-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-	<script src="demos.js"></script>
-	<script type="text/javascript" src="typed.js"></script>
+	<script type="text/javascript" src="js/demo.js"></script>
+	<script type="text/javascript" src="js/typed.js"></script>
 	
-	<link rel='stylesheet' id='tt-easy-google-fonts-css'  href='http://fonts.googleapis.com/css?family=Work+Sans%3Aregular%2C500&#038;subset=latin%2Call&#038;ver=4.9.8' type='text/css' media='all' />
-
 </head>
 
 
