--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						</div>
 			<div class="columns col-gapless">
 				<figure class="project category__item category__item--home column col-6 col-sm-12">
-					<img src="navilist.png" class="category__image" />
+					<img src="images/navilist.png" class="category__image" />
 					<figcaption>
 						<h3>WIP</h3>
 						<h5>UX/UI Design</h5>
@@ -81,7 +81,7 @@
 					<a href="#"></a>
 				</figure>
 				<figure class="project category__item category__item--home column col-6 col-sm-12">
-					<img src="daily-ui-day-one2.png" class="category__image"  />
+					<img src="images/daily-ui-day-one2.png" class="category__image"  />
 					<figcaption>
 						<h3>Daily UI Challenge</h3>
 						<h5>Visual Design</h5>
