--- a/daily-ui-challenge.html
+++ b/daily-ui-challenge.html
@@ -76,45 +76,45 @@
 				<div id='gallery-2' class='gallery gallery-columns-3 gallery-size-full'>
 					<figure class='gallery-item'>
 						<div class='gallery-icon landscape'>
-							<a href='/images/daily-ui-day-one.png'><img width="900" height="900" src="/images/daily-ui-day-one.png"></a>
+							<a href='images/daily-ui-day-one.png'><img width="900" height="900" src="images/daily-ui-day-one.png"></a>
 						</div>
 					<figcaption class='gallery-caption'>
 						#001: Sign In
 					</figcaption>
 					</figure><figure class='gallery-item'>
 						<div class='gallery-icon landscape'>
-							<a href='/images/daily-ui-day-two.png'><img width="900" height="900" src="/images/daily-ui-day-two.png"></a>
+							<a href='images/daily-ui-day-two.png'><img width="900" height="900" src="images/daily-ui-day-two.png"></a>
 						</div>
 					<figcaption class='wp-caption-text gallery-caption' id='gallery-2-546'>
 						#002: Checkout
 					</figcaption>
 					</figure><figure class='gallery-item'>
 						<div class='gallery-icon landscape'>
-							<a href='/images/daily-ui-day-three.png'><img width="900" height="900" src="/images/daily-ui-day-three.png"></a>
+							<a href='images/daily-ui-day-three.png'><img width="900" height="900" src="images/daily-ui-day-three.png"></a>
 						</div>
 					<figcaption class='gallery-caption'>
 						#003: Landing Page
 					</figcaption></figure><figure class='gallery-item'>
 						<div class='gallery-icon landscape'>
-							<a href='/images/daily-ui-day-four.png'><img width="900" height="900" src="/images/daily-ui-day-four.png"></a>
+							<a href='images/daily-ui-day-four.png'><img width="900" height="900" src="images/daily-ui-day-four.png"></a>
 						</div>
 					<figcaption class='gallery-caption'>
 						#004: Calculator
 					</figcaption></figure><figure class='gallery-item'>
 						<div class='gallery-icon landscape'>
-							<a href='/images/daily-ui-day-five.png'><img width="900" height="900" src="/images/daily-ui-day-five.png"></a>
+							<a href='images/daily-ui-day-five.png'><img width="900" height="900" src="images/daily-ui-day-five.png"></a>
 						</div>
 					<figcaption class='gallery-caption'>
 						#005: App Icon
 					</figcaption></figure><figure class='gallery-item'>
 						<div class='gallery-icon landscape'>
-							<a href='/images/daily-ui-day-six.png'><img width="900" height="900" src="/images/daily-ui-day-six.png"></a>
+							<a href='images/daily-ui-day-six.png'><img width="900" height="900" src="images/daily-ui-day-six.png"></a>
 						</div>
 					<figcaption class='gallery-caption'>
 						#006: User Profile
 					</figcaption></figure><figure class='gallery-item'>
 					<div class='gallery-icon landscape'>
-							<a href='/images/daily-ui-day-seven.png'><img width="900" height="900" src="/images/daily-ui-day-seven.png"></a>
+							<a href='images/daily-ui-day-seven.png'><img width="900" height="900" src="images/daily-ui-day-seven.png"></a>
 						</div>
 					<figcaption class='gallery-caption'>
 						#007: Settings
