--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="about.html"><div class="underline">About</div></a></li>
 						<li><a href="index.html"><div class="underline">Work</div></a></li>
-						<li><a href="#"><div class="underline">Resume</div></a></li>
+						<li><a href="elain-tran-resume.pdf" target="_blank"><div class="underline">Resume</div></a></li>
 					</ul>
 				</div>
 			</nav>
