--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Journey with Elain</title>
+<title>elain tran.</title>
     
 	<!-- Metadata -->
     <meta charset="UTF-8">
