--- a/daily-ui-challenge.html
+++ b/daily-ui-challenge.html
@@ -119,6 +119,12 @@
 					<figcaption class='gallery-caption'>
 						#007: Settings
 					</figcaption></figure><figure class='gallery-item'>
+					<div class='gallery-icon landscape'>
+							<a href='images/daily-ui-day-nine.png'><img width="900" height="900" src="images/daily-ui-day-nine.png"></a>
+						</div>
+					<figcaption class='gallery-caption'>
+						#009: Music Player
+					</figcaption></figure><figure class='gallery-item'>
 				</div>
 			</div>
 			</div>
