--- a/daily-ui-challenge.html
+++ b/daily-ui-challenge.html
@@ -120,6 +120,12 @@
 						#007: Settings
 					</figcaption></figure><figure class='gallery-item'>
 					<div class='gallery-icon landscape'>
+							<a href='images/daily-ui-day-eight.png'><img width="900" height="900" src="images/daily-ui-day-eight.png"></a>
+						</div>
+					<figcaption class='gallery-caption'>
+						#008: 404 Page
+					</figcaption></figure><figure class='gallery-item'>
+					<div class='gallery-icon landscape'>
 							<a href='images/daily-ui-day-nine.png'><img width="900" height="900" src="images/daily-ui-day-nine.png"></a>
 						</div>
 					<figcaption class='gallery-caption'>
