--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						<span id="typed"></span></h3>
 						</div>
 			<div class="columns col-gapless">
-				<figure class="project category__item category__item--home column col-6 col-sm-12">
+				<figure class="project column col-6 col-sm-12">
 					<img src="images/navilist.png" class="category__image" />
 					<figcaption>
 						<h3>WIP</h3>
@@ -80,7 +80,15 @@
 					</figcaption>
 					<a href="#"></a>
 				</figure>
-				<figure class="project category__item category__item--home column col-6 col-sm-12">
+				<figure class="project column col-6 col-sm-12">
+					<img src="images/quicksand-photography.png" class="category__image"  />
+					<figcaption>
+						<h3>Quicksand Photography</h3>
+						<h5>Front End Development</h5>
+					</figcaption>
+					<a href="#"></a>
+				</figure>
+				<figure class="project column col-6 col-sm-12">
 					<img src="images/daily-ui-day-one2.png" class="category__image"  />
 					<figcaption>
 						<h3>Daily UI Challenge</h3>
