--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 						<h3>Quicksand Photography</h3>
 						<h5>Front End Development</h5>
 					</figcaption>
-					<a href="#"></a>
+					<a href="quicksand-photography.html"></a>
 				</figure>
 				<figure class="project column col-6 col-sm-12">
 					<img src="images/daily-ui-day-one2.png" class="category__image"  />
