--- a/quicksand-photography.html
+++ b/quicksand-photography.html
@@ -67,9 +67,7 @@
 				<h5><b>Role</b></h5>
 				<h5>Front End Developer</h5>
 				<h5 style="margin-top: 15px;"><b>Languages</b></h5>
-				<h5>HTML</h5>
- 				<h5>CSS</h5>
-   		  <h5>Javascript</h5>
+				<h5>HTML, CSS, Javascript</h5>
         <h5 style="margin-top: 15px;"><b>Framework</b></h5>
 				<h5>Bootstrap</h5>
 			</div>
