--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
 		<section id="portfolio" class="container portfolio-section">
 			<div class="row">
 				<div class="col-sm-6">
-					<img src="headshot.jpg" class="category__image">
+					<img src="images/headshot.jpg" class="category__image">
 				</div>
 				<div class="col-sm-6">
 					<p style="padding-top: 20px;"><b>Hello! I’m Elain, a self-taught visual designer
