--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			<div class="row">
 				<div class="columns">
 					<div class="project col-sm-6">
-						<img src="navilist.png" class="category__image" />
+						<img src="images/navilist.png" class="category__image" />
 						<figcaption>
 							<h3>WIP</h3>
 							<h5>UX/UI Design</h5>
@@ -74,7 +74,7 @@
 						<a href="#"></a>
 					</div>
 					<div class="project col-sm-6">
-						<img src="quicksand-photography.png" class="category__image"  />
+						<img src="images/quicksand-photography.png" class="category__image"  />
 						<figcaption>
 							<h3>Quicksand Photography</h3>
 							<h5>Front End Development</h5>
@@ -82,7 +82,7 @@
 						<a href="quicksand-photography.html"></a>
 					</div>
 					<div class="project col-sm-6">
-						<img src="daily-ui-day-one2.png" class="category__image"  />
+						<img src="images/daily-ui-day-one2.png" class="category__image"  />
 						<figcaption>
 							<h3>Daily UI Challenge</h3>
 							<h5>Visual Design</h5>
