--- a/daily-ui-challenge.html
+++ b/daily-ui-challenge.html
@@ -71,39 +71,39 @@
 			<div class="gallery">
 				<div class="row">
 					<div class="gallery-item col-sm-4">
-						<img src="daily-ui-day-one.png" class="category__image" />
+						<img src="images/daily-ui-day-one.png" class="category__image" />
 						<figcaption>#001: Sign In</figcaption>
 					</div>
 					<div class="gallery-item col-sm-4">
-						<img src="daily-ui-day-two.png" class="category__image" />
+						<img src="images/daily-ui-day-two.png" class="category__image" />
 						<figcaption>#002: Checkout</figcaption>
 					</div>
 					<div class="gallery-item col-sm-4">
-						<img src="daily-ui-day-three.png" class="category__image" />
+						<img src="images/daily-ui-day-three.png" class="category__image" />
 						<figcaption>#003: Landing Page</figcaption>
 					</div>
 					<div class="gallery-item col-sm-4">
-						<img src="daily-ui-day-four.png" class="category__image" />
+						<img src="images/daily-ui-day-four.png" class="category__image" />
 						<figcaption>#004: Calculator</figcaption>
 					</div>
 					<div class="gallery-item col-sm-4">
-						<img src="daily-ui-day-five.png" class="category__image" />
+						<img src="images/daily-ui-day-five.png" class="category__image" />
 						<figcaption>#005: App Icon</figcaption>
 					</div>	
 					<div class="gallery-item col-sm-4">
-						<img src="daily-ui-day-six.png" class="category__image" />
+						<img src="images/daily-ui-day-six.png" class="category__image" />
 						<figcaption>#006: User Profile</figcaption>
 					</div>
 					<div class="gallery-item col-sm-4">
-						<img src="daily-ui-day-seven.png" class="category__image" />
+						<img src="images/daily-ui-day-seven.png" class="category__image" />
 						<figcaption>#007: Settings</figcaption>
 					</div>			
 					<div class="gallery-item col-sm-4">
-						<img src="daily-ui-day-eight.png" class="category__image" />
+						<img src="images/daily-ui-day-eight.png" class="category__image" />
 						<figcaption>#008: 404 Page</figcaption>
 					</div>				
 					<div class="gallery-item col-sm-4">
-						<img src="daily-ui-day-nine.png" class="category__image" />
+						<img src="images/daily-ui-day-nine.png" class="category__image" />
 						<figcaption>#009: Music Player</figcaption>
 					</div>					
 				</div>
