--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
     
 	<!--About-->
 	<div class="container">
-		<section id="portfolio" class="container portfolio-section">
+		<section id="about" class="container about-section">
 			<div class="row">
 				<div class="col-sm-6">
 					<img src="images/headshot.jpg" class="category__image">
