--- a/about.html
+++ b/about.html
@@ -52,10 +52,10 @@
 	<div class="container">
 		<section id="about" class="container about-section">
 			<div class="row">
-				<div class="col-sm-6">
+				<div class="col-md-6">
 					<img src="images/headshot.jpg" class="category__image">
 				</div>
-				<div class="col-sm-6">
+				<div class="col-md-6">
 					<p style="padding-top: 20px;"><b>Hello! I’m Elain, a self-taught visual designer
 					and a front end developer in the making.</b></p>
 					<p>I’m actually a recent graduate of the University of Texas at Austin’s Didactic Program with
