--- a/quicksand-photography.html
+++ b/quicksand-photography.html
@@ -72,15 +72,17 @@
 	<!--End Quicksand Photography-->
 
 	<!--Social Icons-->
-	<div class="container">
-		<div class="social-media-bar">
-			<a href="#"><i class="fa fa-envelope"></i></a> 
-			<a href="https://facebook.com/elainttran"><i class="fa fa-facebook"></i></a>  
-			<a href="https://instagram.com/journeywithelain"><i class="fa fa-instagram"></i></a>
-			<a href="https://github.com/elaintran"><i class="fa fa-github"></i></a>
-			<a href="https://www.linkedin.com/in/elaintran"><i class="fa fa-linkedin"></i></a>
+	<footer>
+		<div class="container">
+			<div class="social-media-bar">
+				<a href="#"><i class="fa fa-envelope"></i></a> 
+				<a href="https://facebook.com/elainttran"><i class="fa fa-facebook"></i></a>  
+				<a href="https://instagram.com/journeywithelain"><i class="fa fa-instagram"></i></a>
+				<a href="https://github.com/elaintran"><i class="fa fa-github"></i></a>
+				<a href="https://www.linkedin.com/in/elaintran"><i class="fa fa-linkedin"></i></a>
+			</div>
 		</div>
-	</div>
+	</footer>
 	<!--End Social Icons-->
 
 </body>
