update to quicksand-photography

--- a/quicksand-photography.html
+++ b/quicksand-photography.html
@@ -69,7 +69,9 @@
 					<h5>Bootstrap</h5>
 				</div>
 			</div>
-			<button class="project-link">View on Github</button>
+			<div class="project-link">
+				<button class="click"><i class="fa fa-github"></i> View on Github</button>
+			</div>
 		</section>
 	</div>
 	<!--End Quicksand Photography-->
