--- a/quicksand-photography.html
+++ b/quicksand-photography.html
@@ -70,7 +70,7 @@
 				</div>
 			</div>
 			<div class="project-link">
-				<button class="click"><i class="fa fa-github"></i> View on Github</button>
+				<a href="https://github.com/elaintran/QuicksandPhotography"><button class="click"><i class="fa fa-github"></i> View on Github</button><a>
 			</div>
 		</section>
 	</div>
