updated spacing for daily ui

--- a/daily-ui-challenge.html
+++ b/daily-ui-challenge.html
@@ -13,11 +13,11 @@
 	<!-- Bootstrap Core CSS -->
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
     
-    	<!-- Fonts -->
+    <!-- Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Quicksand:300,700" rel="stylesheet">
 	
 	<!-- CSS -->
-    	<link rel="stylesheet" type="text/css" href="/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	
 	<!--Javascript-->
@@ -70,41 +70,59 @@
 			</div>
 			<div class="gallery">
 				<div class="row">
-					<div class="gallery-item col-sm-4">
-						<img src="images/daily-ui-day-one.png" class="category__image" />
-						<figcaption>#001: Sign In</figcaption>
+					<div class="col-sm-4">
+						<div class="gallery-item">
+							<img src="images/daily-ui-day-one.png" class="category__image" />
+							<figcaption>#001: Sign In</figcaption>
+						</div>
 					</div>
-					<div class="gallery-item col-sm-4">
-						<img src="images/daily-ui-day-two.png" class="category__image" />
-						<figcaption>#002: Checkout</figcaption>
+					<div class="col-sm-4">
+						<div class="gallery-item">
+							<img src="images/daily-ui-day-two.png" class="category__image" />
+							<figcaption>#002: Checkout</figcaption>
+						</div>
 					</div>
-					<div class="gallery-item col-sm-4">
-						<img src="images/daily-ui-day-three.png" class="category__image" />
-						<figcaption>#003: Landing Page</figcaption>
+					<div class="col-sm-4">
+						<div class="gallery-item">
+							<img src="images/daily-ui-day-three.png" class="category__image" />
+							<figcaption>#003: Landing Page</figcaption>
+						</div>
 					</div>
-					<div class="gallery-item col-sm-4">
-						<img src="images/daily-ui-day-four.png" class="category__image" />
-						<figcaption>#004: Calculator</figcaption>
+					<div class="col-sm-4">
+						<div class="gallery-item">
+							<img src="images/daily-ui-day-four.png" class="category__image" />
+							<figcaption>#004: Calculator</figcaption>
+						</div>
 					</div>
-					<div class="gallery-item col-sm-4">
-						<img src="images/daily-ui-day-five.png" class="category__image" />
-						<figcaption>#005: App Icon</figcaption>
+					<div class="col-sm-4">
+						<div class="gallery-item">
+							<img src="images/daily-ui-day-five.png" class="category__image" />
+							<figcaption>#005: App Icon</figcaption>
+						</div>
 					</div>	
-					<div class="gallery-item col-sm-4">
-						<img src="images/daily-ui-day-six.png" class="category__image" />
-						<figcaption>#006: User Profile</figcaption>
+					<div class="col-sm-4">
+						<div class="gallery-item">
+							<img src="images/daily-ui-day-six.png" class="category__image" />
+							<figcaption>#006: User Profile</figcaption>
+						</div>
 					</div>
-					<div class="gallery-item col-sm-4">
-						<img src="images/daily-ui-day-seven.png" class="category__image" />
-						<figcaption>#007: Settings</figcaption>
+					<div class="col-sm-4">
+						<div class="gallery-item">
+							<img src="images/daily-ui-day-seven.png" class="category__image" />
+							<figcaption>#007: Settings</figcaption>
+						</div>
 					</div>			
-					<div class="gallery-item col-sm-4">
-						<img src="images/daily-ui-day-eight.png" class="category__image" />
-						<figcaption>#008: 404 Page</figcaption>
+					<div class="col-sm-4">
+						<div class="gallery-item">
+							<img src="images/daily-ui-day-eight.png" class="category__image" />
+							<figcaption>#008: 404 Page</figcaption>
+						</div>
 					</div>				
-					<div class="gallery-item col-sm-4">
-						<img src="images/daily-ui-day-nine.png" class="category__image" />
-						<figcaption>#009: Music Player</figcaption>
+					<div class="col-sm-4">
+						<div class="gallery-item">
+							<img src="images/daily-ui-day-nine.png" class="category__image" />
+							<figcaption>#009: Music Player</figcaption>
+						</div>
 					</div>					
 				</div>
 			</div>
