added link to email

--- a/daily-ui-challenge.html
+++ b/daily-ui-challenge.html
@@ -134,7 +134,7 @@
 	<footer>
 		<div class="container">
 			<div class="social-media-bar">
-				<a href="#"><i class="fa fa-envelope"></i></a> 
+				<a href="mailto:elain.ttran@gmail.com"><i class="fa fa-envelope"></i></a> 
 				<a href="https://facebook.com/elainttran"><i class="fa fa-facebook"></i></a>  
 				<a href="https://instagram.com/journeywithelain"><i class="fa fa-instagram"></i></a>
 				<a href="https://github.com/elaintran"><i class="fa fa-github"></i></a>
