--- a/index.html
+++ b/index.html
@@ -65,11 +65,19 @@
 			</div>
 			<div class="row">
 				<div class="columns">
-					<div class="project col-sm-6">
+					<!--<div class="project col-sm-6">
 						<img src="images/navilist.png" class="category__image" />
 						<figcaption>
 							<h3>WIP</h3>
 							<h5>UX/UI Design</h5>
+						</figcaption>
+						<a href="#"></a>
+					</div>-->
+					<div class="project col-sm-6">
+						<img src="images/wikipedia-viewer.png" class="category__image"  />
+						<figcaption>
+							<h3>Wikipedia Viewer</h3>
+							<h5>Front End Development</h5>
 						</figcaption>
 						<a href="#"></a>
 					</div>
