--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
 			</div>
 			<div class="row">
 				<div class="columns">
-					<!--<div class="project col-sm-6">
+					<div class="project col-sm-6">
 						<img src="images/navilist.png" class="category__image" />
 						<figcaption>
 							<h3>WIP</h3>
 							<h5>UX/UI Design</h5>
 						</figcaption>
 						<a href="#"></a>
-					</div>-->
+					</div>
 					<div class="project col-sm-6">
 						<img src="images/wikipedia-viewer.png" class="category__image"  />
 						<figcaption>
