added new project

--- a/index.html
+++ b/index.html
@@ -74,6 +74,14 @@
 						<a href="#"></a>
 					</div>
 					<div class="project col-sm-6">
+						<img src="images/wikipedia-viewer2.png" class="category__image" />
+						<figcaption>
+							<h3>Wikipedia Viewer</h3>
+							<h5>Front End Development</h5>
+						</figcaption>
+						<a href="#"></a>
+					</div>
+					<div class="project col-sm-6">
 						<img src="images/quicksand-photography.png" class="category__image"  />
 						<figcaption>
 							<h3>Quicksand Photography</h3>
