--- a/index.html
+++ b/index.html
@@ -66,37 +66,45 @@
 			<div class="gallery">
 				<div class="row">
 					<div class="columns">
-						<div class="project col-sm-6">
-							<img src="images/navilist.png" class="category__image" />
-							<figcaption>
-								<h3>WIP</h3>
-								<h5>UX/UI Design</h5>
-							</figcaption>
-							<a href="#"></a>
+						<div class="col-sm-6">
+							<div class="project project-item">
+								<img src="images/navilist.png" class="category__image" />
+								<figcaption>
+									<h3>WIP</h3>
+									<h5>UX/UI Design</h5>
+								</figcaption>
+								<a href="#"></a>
+							</div>
 						</div>
-						<div class="project col-sm-6">
-							<img src="images/wikipedia-viewer2.png" class="category__image" />
-							<figcaption>
-								<h3>Wikipedia Viewer</h3>
-								<h5>Front End Development</h5>
-							</figcaption>
-							<a href="#"></a>
+						<div class="col-sm-6">
+							<div class="project project-item">
+								<img src="images/wikipedia-viewer2.png" class="category__image" />
+								<figcaption>
+									<h3>Wikipedia Viewer</h3>
+									<h5>Front End Development</h5>
+								</figcaption>
+								<a href="#"></a>
+							</div>
 						</div>
-						<div class="project col-sm-6">
-							<img src="images/quicksand-photography.png" class="category__image"  />
-							<figcaption>
-								<h3>Quicksand Photography</h3>
-								<h5>Front End Development</h5>
-							</figcaption>
-							<a href="quicksand-photography.html"></a>
+						<div class="col-sm-6">
+							<div class="project project-item">
+								<img src="images/quicksand-photography.png" class="category__image"  />
+								<figcaption>
+									<h3>Quicksand Photography</h3>
+									<h5>Front End Development</h5>
+								</figcaption>
+								<a href="quicksand-photography.html"></a>
+							</div>
 						</div>
-						<div class="project col-sm-6">
-							<img src="images/daily-ui-day-one2.png" class="category__image"  />
-							<figcaption>
-								<h3>Daily UI Challenge</h3>
-								<h5>Visual Design</h5>
-							</figcaption>
-							<a href="daily-ui-challenge.html"></a>
+						<div class="col-sm-6">
+							<div class="project project-item">
+								<img src="images/daily-ui-day-one2.png" class="category__image"  />
+								<figcaption>
+									<h3>Daily UI Challenge</h3>
+									<h5>Visual Design</h5>
+								</figcaption>
+								<a href="daily-ui-challenge.html"></a>
+							</div>
 						</div>
 					</div>
 				</div>
