object fit the project images

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 							</div>
 						</div>
 						<div class="col-sm-6">
-							<div class="project project-item">
+							<div class="project project-item category__image">
 								<img src="images/daily-ui-day-one2.png" class="category__image"  />
 								<figcaption>
 									<h3>Daily UI Challenge</h3>
