changed title name of pages

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>about elain tran.</title>
+<title>About Elain Tran</title>
     
 	<!-- Metadata -->
     	<meta charset="UTF-8">
