--- a/daily-ui-challenge.html
+++ b/daily-ui-challenge.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>elain tran.</title>
+<title>Daily UI Challenge</title>
     
 	<!-- Metadata -->
 	<meta charset="UTF-8">
