--- a/wikipedia-viewer.html
+++ b/wikipedia-viewer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>elain tran.</title>
+<title>Wikipedia Viewer</title>
     
 	<!-- Metadata -->
     <meta charset="UTF-8">
