--- a/quicksand-photography.html
+++ b/quicksand-photography.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>elain tran.</title>
+<title>Quicksand Photography</title>
     
 	<!-- Metadata -->
     <meta charset="UTF-8">
