--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 	<script type="text/javascript" src="js/demo.js"></script>
 	<script type="text/javascript" src="js/typed.js"></script>
 
+	<!--Favicon-->
+	<link rel="shortcut icon" href="images/favicon.png"/>
+
 </head>
 
 <body>
