--- a/daily-ui-challenge.html
+++ b/daily-ui-challenge.html
@@ -23,6 +23,10 @@
 	<!--Javascript-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
+	<!--Favicon-->
+	<link rel="shortcut icon" href="images/favicon.png"/>
+
 </head>
 
 <body>
