--- a/quicksand-photography.html
+++ b/quicksand-photography.html
@@ -73,7 +73,8 @@
 				</div>
 			</div>
 			<div class="project-link">
-				<a href="https://github.com/elaintran/QuicksandPhotography"><button class="click"><i class="fa fa-github"></i> View on Github</button><a>
+				<a href="https://elaintran.github.io/QuicksandPhotography" target="_blank"><button class="click"><i class=""></i> View Live</button></a>
+				<a href="https://github.com/elaintran/QuicksandPhotography" target="_blank"><button class="click"><i class="fa fa-github"></i> View on Github</button></a>
 			</div>
 		</section>
 	</div>
