--- a/wikipedia-viewer.html
+++ b/wikipedia-viewer.html
@@ -69,7 +69,7 @@
 				</div>
 			</div>
 			<div class="project-link">
-				<a href="https://elaintran.github.io/WikipediaViewer" target="_blank"><button class="click"><i class=""></i> View Live</button></a>
+				<a href="https://elaintran.github.io/WikipediaViewer" target="_blank"><button class="click"><i class=""></i> View Live Demo</button></a>
 				<a href="https://github.com/elaintran/Wikipedia Viewer" target="_blank"><button class="click"><i class="fa fa-github"></i> View on Github</button><a>
 			</div>
 		</section>
