--- a/about.html
+++ b/about.html
@@ -60,9 +60,9 @@
 				</div>
 				<div class="col-md-6">
 					<p style="padding-top: 20px;"><b>Hello! I’m Elain, a self-taught visual designer
-					and a front end developer in the making.</b></p>
+					and an aspiring front end developer.</b></p>
 					<p>I’m actually a recent graduate of the University of Texas at Austin’s Didactic Program with
-					a B.S. in Nutrition and a certificate in Business, but I realized that I wanted to make the dive								into the intersecting realm of technology and design after discovering the importance of user
+					a B.S. in Nutrition and a certificate in Business, but I realized that I wanted to make the dive				into the intersecting realm of technology and design after discovering the importance of user
 					interface and experience on customer satisfaction.</p>
 					<p>Join me on my journey to becoming a more well-rounded designer and web developer as I
 					challenge myself, document my process, and improve my craft.</p>
