--- a/about.html
+++ b/about.html
@@ -61,9 +61,12 @@
 				<div class="col-md-6">
 					<p style="padding-top: 20px;"><b>Hello! I’m Elain, a self-taught visual designer
 					and an aspiring front end developer.</b></p>
-					<p>I’m actually a recent graduate of the University of Texas at Austin’s Didactic Program with
-					a B.S. in Nutrition and a certificate in Business, but I realized that I wanted to make the dive				into the intersecting realm of technology and design after discovering the importance of user
-					interface and experience on customer satisfaction.</p>
+					<p>I’m also a recent graduate of the University of Texas at Austin’s Didactic Program with
+					a B.S. in Nutrition and a certificate in Business. Instead of pursuing a career in health, I 
+					decided that I wanted to make the dive into the intersecting realm of technology and design
+					and create everlasting experiences.</p>
+					<p>When I'm not building responsive websites or picking apart data in APIs, I experiment in 
+					game development and create worlds one pixel at a time.</p>
 					<p>Join me on my journey to becoming a more well-rounded designer and web developer as I
 					challenge myself, document my process, and improve my craft.</p>
 				</div>
