--- a/wikipedia-viewer.html
+++ b/wikipedia-viewer.html
@@ -74,7 +74,19 @@
 			</div>
 		</section>
 	</div>
-	<!--End Quicksand Photography-->
+	<!--End Wikipedia Viewer-->
+
+	<!--Project List-->
+	<!--<div class="container">
+		<div class="project-list">
+			<p><a href="index.html">All</a> • <a href="twitch-monitor.html">Twitch Monitor</a> •
+				<a href="local-weather-app.html">Local Weather App</a> • 
+				<a href="wikipedia-viewer.html" class="current-page">Wikipedia Viewer</a> •
+				<a href="quicksand-photography.html">Quicksand Photography</a> • <a href="daily-ui-challenge.html">
+				Daily UI Challenge</a></p>
+		</div>
+	</div>-->
+	<!--End Project List-->
 
 	<!--Social Icons-->
 	<footer>
