--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	<!--Portfolio-->
     <div class="container">
 		<section id="portfolio" class="container portfolio-section">
-			<div class="intro">
+			<!--<div class="intro">
 		        <h1>Hello! I'm Elain Tran.</h1>
 				<h3>I am
 					<div id="typed-strings">
@@ -65,11 +65,16 @@
 						<p><strong>ready to change the world.</strong></p>
 					</div>
 				<span id="typed"></span></h3>
+			</div>-->
+			<div class="tag-list">
+				<div class="index-tag active all-tag"><h6>All</h6></div>
+				<div class="index-tag code-tag"><h6>Code</h6></div>
+				<div class="index-tag design-tag"><h6>Design</h6></div>
 			</div>
 			<div class="gallery">
 				<div class="row">
 					<div class="columns">
-						<div class="col-sm-6">
+						<div class="col-sm-6 design">
 							<div class="project project-item">
 								<img src="images/navilist.png" class="category__image" />
 								<figcaption>
@@ -79,7 +84,7 @@
 								<a href="#"></a>
 							</div>
 						</div>
-						<div class="col-sm-6">
+						<div class="col-sm-6 code">
 							<div class="project project-item">
 								<img src="images/wikipedia-viewer2.png" class="category__image" />
 								<figcaption>
@@ -89,7 +94,7 @@
 								<a href="wikipedia-viewer.html"></a>
 							</div>
 						</div>
-						<div class="col-sm-6">
+						<div class="col-sm-6 code">
 							<div class="project project-item">
 								<img src="images/quicksand-photography.png" class="category__image"  />
 								<figcaption>
@@ -99,7 +104,7 @@
 								<a href="quicksand-photography.html"></a>
 							</div>
 						</div>
-						<div class="col-sm-6">
+						<div class="col-sm-6 design">
 							<div class="project project-item category__image">
 								<img src="images/daily-ui-day-one2.png" class="category__image"  />
 								<figcaption>
@@ -129,6 +134,9 @@
 		</div>
 	<footer>
 	<!--End Social Icons-->	
+
+	<!--Javascript-->
+	<script type="text/javascript" src="js/script.js"></script>
 
 </body>
 </html>
