--- a/quicksand-photography.html
+++ b/quicksand-photography.html
@@ -57,7 +57,8 @@
 			<img src="images/quicksand-photography.png" class="category__image">
 			<div class="project-tag">
 				<div class="tag-list">
-					<div class="index-tag active"><h6>#HTML / CSS</h6></div>
+					<div class="index-tag active"><h6>#HTML</h6></div>
+					<div class="index-tag active"><h6>#CSS</h6></div>
 					<div class="index-tag active"><h6>#jQuery</h6></div>
 					<div class="index-tag active"><h6>#Bootstrap</h6></div>
 					<div class="index-tag active"><h6>#Photoshop</h6></div>
