--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 	<!--Javascript-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="js/demo.js"></script>
-	<script type="text/javascript" src="js/typed.js"></script>
+	<!--<script type="text/javascript" src="js/demo.js"></script>
+	<script type="text/javascript" src="js/typed.js"></script>-->
 
 	<!--Favicon-->
 	<link rel="shortcut icon" href="images/favicon.png"/>
