added cover photo to daily ui

--- a/daily-ui-challenge.html
+++ b/daily-ui-challenge.html
@@ -54,6 +54,7 @@
 	<!--Daily UI-->
 	<div class="container">
 		<section id="portfolio" class="container portfolio-section">
+			<img src="images/daily-ui-day-one2.png" class="category__image">
 			<div class="project-tag">
 				<div class="tag-list">
 					<div class="index-tag active"><h6>#UI Design</h6></div>
