updated with quote generator

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<div class="gallery">
 				<div class="row">
 					<div class="columns">
-						<div class="col-sm-6 design">
+						<!--<div class="col-sm-6 design">
 							<div class="project project-item">
 								<img src="images/navilist.png" class="category__image" />
 								<figcaption>
@@ -83,13 +83,23 @@
 								</figcaption>
 								<a href="#"></a>
 							</div>
+						</div>-->
+						<div class="col-sm-6 code">
+							<div class="project project-item">
+								<img src="images/quote-machine.png" class="category__image" />
+								<figcaption>
+									<h3>Quote Generator</h3>
+									<h5>Web Development</h5>
+								</figcaption>
+								<a href="quote-generator.html"></a>
+							</div>
 						</div>
 						<div class="col-sm-6 code">
 							<div class="project project-item">
 								<img src="images/wikipedia-viewer2.png" class="category__image" />
 								<figcaption>
 									<h3>Wikipedia Viewer</h3>
-									<h5>Front End Development</h5>
+									<h5>Web Development</h5>
 								</figcaption>
 								<a href="wikipedia-viewer.html"></a>
 							</div>
@@ -99,7 +109,7 @@
 								<img src="images/quicksand-photography.png" class="category__image"  />
 								<figcaption>
 									<h3>Quicksand Photography</h3>
-									<h5>Front End Development</h5>
+									<h5>Web Development</h5>
 								</figcaption>
 								<a href="quicksand-photography.html"></a>
 							</div>
