--- a/quote-generator.html
+++ b/quote-generator.html
@@ -61,6 +61,7 @@
 					<div class="index-tag active"><h6>#Sass</h6></div>
 					<div class="index-tag active"><h6>#Bootstrap</h6></div>
 					<div class="index-tag active"><h6>#Javascript</h6></div>
+					<div class="index-tag active"><h6>#jQuery</h6></div>
 					<div class="index-tag active"><h6>#API</h6></div>
 				</div>
 			</div>
