--- a/index.html
+++ b/index.html
@@ -74,16 +74,26 @@
 			<div class="gallery">
 				<div class="row">
 					<div class="columns">
-						<!--<div class="col-sm-6 design">
+						<div class="col-sm-6 design">
 							<div class="project project-item">
 								<img src="images/navilist.png" class="category__image" />
 								<figcaption>
-									<h3>WIP</h3>
-									<h5>UX/UI Design</h5>
+									<h3>NaviList</h3>
+									<h5>Visual Design</h5>
 								</figcaption>
 								<a href="#"></a>
 							</div>
-						</div>-->
+						</div>
+						<div class="col-sm-6 code">
+							<div class="project project-item">
+								<img src="images/pomodoro-timer.png" class="category__image" />
+								<figcaption>
+									<h3>Pomodoro Timer</h3>
+									<h5>Web Development</h5>
+								</figcaption>
+								<a href="pomodoro-timer.html"></a>
+							</div>
+						</div>
 						<div class="col-sm-6 code">
 							<div class="project project-item">
 								<img src="images/quote-machine.png" class="category__image" />
