front page change and project info update

--- a/quote-generator.html
+++ b/quote-generator.html
@@ -44,7 +44,7 @@
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="about.html"><div class="underline">About</div></a></li>
-				<li><a href="index.html"><div class="underline">Work</div></a></li>
+				<li><a href="index.html#portfolio"><div class="underline">Work</div></a></li>
 				<li><a href="elain-tran-resume.pdf" target="_blank"><div class="underline">Resume</div></a></li>
 			</ul>
 		</div>
@@ -69,6 +69,14 @@
 				<div class="description">
 					<h4><b>Quote Generator</b></h3>
 					<p>The Quote Generator pulls random quotes using the Quotes on Design API. This project was developed for <a href="https://learn.freecodecamp.org/front-end-libraries/front-end-libraries-projects/build-a-random-quote-machine/">one of freeCodeCamp’s front end libraries certification projects</a>.</p>
+					<h4><b>User Stories</b></h4>
+					<p>One of freeCodeCamp’s intermediate front end projects is to create a <a href="https://learn.freecodecamp.org/front-end-libraries/front-end-libraries-projects/build-a-random-quote-machine" target="_blank">random quote machine</a> with the following user stories:</p>
+					<ul>
+						<li>I can fetch a new quote by clicking the Next button.</li>
+						<li>I can click the Twitter icon to tweet the current quote.</li>
+					</ul>
+					<h4><b>Development Process</b></h4>
+					<p>Currently in progess. Check back later.</p>
 				</div>
 			</div>
 			<div class="project-link">
