--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="about.html"><div class="underline">About</div></a></li>
-				<li><a href="index.html"><div class="underline">Work</div></a></li>
+				<li><a href="index.html#portfolio"><div class="underline">Work</div></a></li>
 				<li><a href="#"><div class="underline">Resume</div></a></li>
 			</ul>
 		</div>
