--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Quicksand:300,700" rel="stylesheet">
 	
 	<!-- CSS -->
-	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	
 	<!--Javascript-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -28,6 +28,10 @@
 
 	<!--Favicon-->
 	<link rel="shortcut icon" href="images/favicon.png"/>
+
+	<!--Fonts-->
+	<link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
+
 
 </head>
 
@@ -41,17 +45,31 @@
 				<span class="icon-bar middle-bar"></span>
 				<span class="icon-bar bottom-bar"></span>
 			</button>
-			<a class="navbar-brand" href="index.html">elain.</a>
+			<a class="navbar-brand" href="#top">elain.</a>
 		</div>
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="about.html"><div class="underline">About</div></a></li>
-				<li><a href="index.html"><div class="underline">Work</div></a></li>
+				<li><a href="#portfolio"><div class="underline">Work</div></a></li>
 				<li><a href="elain-tran-resume.pdf" target="_blank"><div class="underline">Resume</div></a></li>
 			</ul>
 		</div>
 	</nav>
 	<!--End Navigation-->
+
+	<!--Splash Screen-->
+	<div class="container">
+		<div class="inner-container" id="top">
+			<div class="splash">
+				<h5 class="basic-info">Elain Tran - Visual Designer & Web Developer</h5>
+				<h1 class="sub-info">Hello! I’m a self-taught visual designer and an aspiring front end developer
+				based in Austin, Texas.</h1>
+				<div class="down">
+					<a href="#portfolio"><i class="fa fa-angle-down"></i></a>
+				</div>
+			</div>
+		</div>
+	</div>
     
 	<!--Portfolio-->
     <div class="container">
@@ -81,7 +99,7 @@
 									<h3>NaviList</h3>
 									<h5>Visual Design</h5>
 								</figcaption>
-								<a href="#"></a>
+								<!--<a href="#"></a>-->
 							</div>
 						</div>
 						<div class="col-sm-6 code">
