added more project info

--- a/pomodoro-timer.html
+++ b/pomodoro-timer.html
@@ -53,7 +53,7 @@
 	
 	<!--Wikipedia Viewer-->
 	<div class="container">
-		<section id="portfolio" class="container portfolio-section">
+		<section id="portfolio" class="container project-section">
 			<img src="images/pomodoro-timer.png" class="category__image">
 			<div class="project-tag">
 				<div class="tag-list">
