--- a/quicksand-photography.html
+++ b/quicksand-photography.html
@@ -53,7 +53,7 @@
 	
 	<!--Quicksand Photography-->
 	<div class="container">
-		<section id="portfolio" class="container portfolio-section">
+		<section id="portfolio" class="container project-section">
 			<img src="images/quicksand-photography.png" class="category__image">
 			<div class="project-tag">
 				<div class="tag-list">
