--- a/daily-ui-challenge.html
+++ b/daily-ui-challenge.html
@@ -53,7 +53,7 @@
 	
 	<!--Daily UI-->
 	<div class="container">
-		<section id="portfolio" class="container portfolio-section">
+		<section id="portfolio" class="container project-section">
 			<img src="images/daily-ui-day-one2.png" class="category__image">
 			<div class="project-tag">
 				<div class="tag-list">
