--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
 	<!--Javascript-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-	<!--<script type="text/javascript" src="js/demo.js"></script>
-	<script type="text/javascript" src="js/typed.js"></script>-->
 
 	<!--Favicon-->
 	<link rel="shortcut icon" href="images/favicon.png"/>
@@ -49,9 +47,9 @@
 		</div>
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="about.html"><div class="underline">About</div></a></li>
-				<li><a href="#portfolio"><div class="underline">Work</div></a></li>
-				<li><a href="elain-tran-resume.pdf" target="_blank"><div class="underline">Resume</div></a></li>
+				<li><a href="about.html" class="menu"><div class="underline">About</div></a></li>
+				<li><a href="#portfolio" class="menu"><div class="underline">Work</div></a></li>
+				<li><a href="elain-tran-resume.pdf" class="menu" target="_blank"><div class="underline">Resume</div></a></li>
 			</ul>
 		</div>
 	</nav>
