--- a/wikipedia-viewer.html
+++ b/wikipedia-viewer.html
@@ -75,7 +75,7 @@
 						<li>I can click a button to see a random Wikipedia entry.</li>
 					</ul>
 					<h4><b>Development Process</b></h4>
-					<p>Currently in progess. Check back later.</p>
+					<p>Currently in progress. Check back later.</p>
 				</div>
 			</div>
 			<div class="project-link">
