updated pomodoro tags

--- a/pomodoro-timer.html
+++ b/pomodoro-timer.html
@@ -59,6 +59,7 @@
 				<div class="tag-list">
 					<div class="index-tag active"><h6>#HTML</h6></div>
 					<div class="index-tag active"><h6>#SASS</h6></div>
+					<div class="index-tag active"><h6>#Bootstrap</h6></div>
 					<div class="index-tag active"><h6>#Javascript</h6></div>
 				</div>
 			</div>
