--- a/pomodoro-timer.html
+++ b/pomodoro-timer.html
@@ -75,7 +75,7 @@
 						<li>I can customize the length of each pomodoro.</li>
 					</ul>
 					<h4><b>Development Process</b></h4>
-					<p>Currently in progess. Check back later.</p>
+					<p>Currently in progress. Check back later.</p>
 				</div>
 			</div>
 			<div class="project-link">
