--- a/quote-generator.html
+++ b/quote-generator.html
@@ -76,7 +76,7 @@
 						<li>I can press the Twitter icon to tweet the current quote.</li>
 					</ul>
 					<h4><b>Development Process</b></h4>
-					<p>Currently in progess. Check back later.</p>
+					<p>Currently in progress. Check back later.</p>
 				</div>
 			</div>
 			<div class="project-link">
