--- a/about.html
+++ b/about.html
@@ -13,11 +13,11 @@
 	<!-- Bootstrap Core CSS -->
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
     
-    	<!-- Fonts -->
+    <!-- Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Quicksand:300,700" rel="stylesheet">
 	
 	<!-- CSS -->
-    	<link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	
 	<!--Javascript-->
@@ -45,7 +45,7 @@
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="about.html"><div class="underline">About</div></a></li>
 				<li><a href="index.html#portfolio"><div class="underline">Work</div></a></li>
-				<li><a href="#"><div class="underline">Resume</div></a></li>
+				<li><a href="elain-tran-resume.pdf" class="menu" target="_blank"><div class="underline">Resume</div></a></li>
 			</ul>
 		</div>
 	</nav>
