--- a/daily-ui-challenge.html
+++ b/daily-ui-challenge.html
@@ -45,7 +45,7 @@
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="about.html"><div class="underline">About</div></a></li>
 				<li><a href="index.html#portfolio"><div class="underline">Work</div></a></li>
-				<li><a href="#"><div class="underline">Resume</div></a></li>
+				<li><a href="elain-tran-resume.pdf" class="menu" target="_blank"><div class="underline">Resume</div></a></li>
 			</ul>
 		</div>
 	</nav>
