created and updated rpg game page

--- a/wikipedia-viewer.html
+++ b/wikipedia-viewer.html
@@ -56,7 +56,7 @@
 				<div class="tag-list">
 					<div class="index-tag active"><h6>#HTML</h6></div>
 					<div class="index-tag active"><h6>#CSS</h6></div>
-					<div class="index-tag active"><h6>#Javascript</h6></div>
+					<div class="index-tag active"><h6>#JavaScript</h6></div>
 					<div class="index-tag active"><h6>#jQuery</h6></div>
 					<div class="index-tag active"><h6>#API</h6></div>
 				</div>
