--- a/about.html
+++ b/about.html
@@ -33,22 +33,17 @@
 
 <body>
     <!-- Navigation -->
-	<nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar top-bar"></span>
-				<span class="icon-bar middle-bar"></span>
-				<span class="icon-bar bottom-bar"></span>
-			</button>
-			<a class="navbar-brand" href="index.html">elain.</a>
-		</div>
-		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-			<ul class="nav navbar-nav navbar-right">
-				<li><a href="about.html"><div class="underline">About</div></a></li>
-				<li><a href="index.html#portfolio"><div class="underline">Work</div></a></li>
-				<li><a href="elain-tran-resume.pdf" class="menu" target="_blank"><div class="underline">Resume</div></a></li>
-			</ul>
+	<nav class="navbar fixed-top navbar-expand-md navbar-light" style="background-color: white;">
+		<a class="navbar-brand" href="index.html">elain.</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+			<div class="navbar-nav ml-auto">
+				<a href="about.html" class="nav-link menu"><div class="underline">About</div></a>
+				<a href="index.html#portfolio" class="nav-link menu"><div class="underline">Work</div></a>
+				<a href="elain-tran-resume.pdf" class="nav-link menu" target="_blank"><div class="underline">Resume</div></a>
+			</div>
 		</div>
 	</nav>
 	<!--End Navigation-->
