updated the missing closing anchor tag

--- a/rpg-game.html
+++ b/rpg-game.html
@@ -48,7 +48,7 @@
 	</nav>
 	<!--End Navigation-->
 	
-	<!--Quote Generator-->
+	<!--RPG Game-->
 	<div class="section-container">
 		<section id="portfolio" class="container project-section">
 			<img src="images/rpg-game.png" class="category__image">
@@ -79,11 +79,11 @@
 			</div>
 			<div class="project-link">
 				<a href="https://elaintran.github.io/unit-4-game" target="_blank"><button class="click"><i class=""></i> View Live Demo</button></a>
-				<a href="https://github.com/elaintran/unit-4-game" target="_blank"><button class="click"><i class="fa fa-github"></i> View on Github</button><a>
+				<a href="https://github.com/elaintran/unit-4-game" target="_blank"><button class="click"><i class="fa fa-github"></i> View on Github</button></a>
 			</div>
 		</section>
 	</div>
-	<!--End Quote Generator-->
+	<!--End RPG Game-->
 
 	<!--Social Icons-->
 	<footer>
