--- a/wikipedia-viewer.html
+++ b/wikipedia-viewer.html
@@ -80,7 +80,7 @@
 			</div>
 			<div class="project-link">
 				<a href="https://elaintran.github.io/WikipediaViewer" target="_blank"><button class="click"><i class=""></i> View Live Demo</button></a>
-				<a href="https://github.com/elaintran/WikipediaViewer" target="_blank"><button class="click"><i class="fa fa-github"></i> View on Github</button><a>
+				<a href="https://github.com/elaintran/WikipediaViewer" target="_blank"><button class="click"><i class="fa fa-github"></i> View on Github</button></a>
 			</div>
 		</section>
 	</div>
