--- a/word-guess-game.html
+++ b/word-guess-game.html
@@ -78,7 +78,7 @@
 			</div>
 			<div class="project-link">
 				<a href="https://elaintran.github.io/WordGuessGame" target="_blank"><button class="click"><i class=""></i> View Live Demo</button></a>
-				<a href="https://github.com/elaintran/WordGuessGame" target="_blank"><button class="click"><i class="fa fa-github"></i> View on Github</button><a>
+				<a href="https://github.com/elaintran/WordGuessGame" target="_blank"><button class="click"><i class="fa fa-github"></i> View on Github</button></a>
 			</div>
 		</section>
 	</div>
