--- a/index.html
+++ b/index.html
@@ -75,6 +75,17 @@
 					<div class="row">
 						<div class="col-sm-6 code">
 							<div class="project project-item">
+								<img src="images/getgiphy.png" class="category__image" />
+								<a href="getgiphy.html">
+									<figcaption>
+										<h3>getGiphy</h3>
+										<h5>Web Development</h5>
+									</figcaption>
+								</a>
+							</div>
+						</div>
+						<div class="col-sm-6 code">
+							<div class="project project-item">
 								<img src="images/trivia-game.png" class="category__image" />
 								<a href="trivia-game.html">
 									<figcaption>
