updated links for getgiphy

--- a/getgiphy.html
+++ b/getgiphy.html
@@ -81,8 +81,8 @@
 				</div>
 			</div>
 			<div class="project-link">
-				<a href="https://elaintran.github.io/PomodoroTimer" target="_blank"><button class="click"><i class=""></i> View Live Demo</button></a>
-				<a href="https://github.com/elaintran/PomodoroTimer" target="_blank"><button class="click"><i class="fa fa-github"></i> View on Github</button></a>
+				<a href="https://elaintran.github.io/GifTastic" target="_blank"><button class="click"><i class=""></i> View Live Demo</button></a>
+				<a href="https://github.com/elaintran/GifTastic" target="_blank"><button class="click"><i class="fa fa-github"></i> View on Github</button></a>
 			</div>
 		</section>
 	</div>
