updated front page bio

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<div class="inner-container" id="top">
 			<div class="splash">
 				<h5>Elain Tran - Visual Designer & Web Developer</h5>
-				<h1>Hello! I’m a self-taught visual designer and an aspiring front end developer
+				<h1>Hello! I’m a self-taught visual designer and front end developer
 				based in Austin, Texas.</h1>
 				<div class="down">
 					<a href="#portfolio"><i class="fa fa-angle-down"></i></a>
